force-app/main/default/objects/Audit_Counsellor__c/Audit_Counsellor__c.object-meta.xml
<CustomObject>
    <label>Audit Counsellor</label>
    <nameField>
        <displayFormat>AC - {000}</displayFormat>
        <label>Audit Officer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Audit Counsellors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>