force-app/main/default/objects/Audit_Counsellor__c/fields/Admission_Officer_Name__c.field-meta.xml
<CustomField>
    <fullName>Admission_Officer_Name__c</fullName>
    <formula>Audit_Officer__r.AO__r.FirstName+&apos; &apos;+ Audit_Officer__r.AO__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Admission Officer Name</label>
    <type>Text</type>
</CustomField>