force-app/main/default/objects/Audit_Counsellor__c/fields/Audit_Officer__c.field-meta.xml
<CustomField>
    <fullName>Audit_Officer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Audit Officer</label>
    <referenceTo>Audit_Officer__c</referenceTo>
    <relationshipLabel>Audit Counsellors</relationshipLabel>
    <relationshipName>Audit_Counsellors</relationshipName>
    <type>Lookup</type>
</CustomField>