force-app/main/default/objects/Audit_Counsellor__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Audit_Officer__c</columns>
    <columns>IsActive__c</columns>
    <columns>User__c</columns>
    <columns>Available__c</columns>
    <columns>Admission_Officer_Name__c</columns>
    <columns>Last_RRid__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>